mdAPIZip/unpackaged/objects/Bear__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Calculates age in years</description>
        <formula>IF( NOT( ISBLANK( Birthdate__c ) ) ,
  IF( DATE( 2000 , MONTH( Birthdate__c ) , DAY( Birthdate__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthdate__c ),
     YEAR (Today()) - YEAR ( Birthdate__c ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height (cm)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <label>Observations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bears</relationshipLabel>
        <relationshipName>Bears</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight (Kg)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bear</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Age__c</columns>
        <columns>Sex__c</columns>
        <columns>Supervisor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bear Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bears</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>